[gd_scene load_steps=41 format=2]

[ext_resource path="res://psd/MainInterface.png" type="Texture" id=1]
[ext_resource path="res://scn/machine/cardDreieckEmpty.png" type="Texture" id=2]
[ext_resource path="res://scn/machine/cardViereckEmpty.png" type="Texture" id=3]
[ext_resource path="res://scn/machine/cardViereck.png" type="Texture" id=4]
[ext_resource path="res://scn/machine/cardDreieck.png" type="Texture" id=5]
[ext_resource path="res://scn/machine/cardCircleEmpty.png" type="Texture" id=6]
[ext_resource path="res://scn/machine/cardPoligon.png" type="Texture" id=7]
[ext_resource path="res://scn/machine/ConveyerBelt.png" type="Texture" id=8]
[ext_resource path="res://scn/machine/GlassPanel.png" type="Texture" id=9]
[ext_resource path="res://scn/machine/RightPanel.png" type="Texture" id=10]
[ext_resource path="res://scn/machine/cardPoligonEmpty.png" type="Texture" id=11]
[ext_resource path="res://scn/machine/MainInterface.png" type="Texture" id=12]
[ext_resource path="res://scn/machine/Background.png" type="Texture" id=13]
[ext_resource path="res://scn/machine/leftPanel.png" type="Texture" id=14]
[ext_resource path="res://scn/machine/cardCircle.png" type="Texture" id=15]
[ext_resource path="res://scn/machine/BackgroundMachine.png" type="Texture" id=16]
[ext_resource path="res://scn/Cards.gd" type="Script" id=17]
[ext_resource path="res://scn/Ripples.gd" type="Script" id=18]
[ext_resource path="res://scn/ToolArm.tscn" type="PackedScene" id=19]
[ext_resource path="res://scn/MainGameScene.gd" type="Script" id=20]
[ext_resource path="res://scn/Spawner.tscn" type="PackedScene" id=21]
[ext_resource path="res://scn/machine/lamp_neutral.png" type="Texture" id=22]
[ext_resource path="res://scn/machine/CheckPanel.tscn" type="PackedScene" id=23]
[ext_resource path="res://scn/UIScreen.gd" type="Script" id=24]
[ext_resource path="res://scn/machine/Panel.png" type="Texture" id=25]
[ext_resource path="res://scn/machine/leftLight.png" type="Texture" id=26]
[ext_resource path="res://scn/machine/Ripples.png" type="Texture" id=27]
[ext_resource path="res://scn/TimeContainer.gd" type="Script" id=28]
[ext_resource path="res://scn/workpiece/WorkpiecesToSpawn/workpiece1.tscn" type="PackedScene" id=29]
[ext_resource path="res://scn/DifficultyPanel.gd" type="Script" id=30]
[ext_resource path="res://project/main_theme.tres" type="Theme" id=31]
[ext_resource path="res://project/text_theme.tres" type="Theme" id=32]
[ext_resource path="res://scn/Sound.gd" type="Script" id=33]
[ext_resource path="res://sound/tool1.wav" type="AudioStream" id=34]
[ext_resource path="res://sound/check.wav" type="AudioStream" id=35]
[ext_resource path="res://sound/error.wav" type="AudioStream" id=36]
[ext_resource path="res://sound/last error.wav" type="AudioStream" id=37]
[ext_resource path="res://sound/startmachine.wav" type="AudioStream" id=38]
[ext_resource path="res://sound/button.wav" type="AudioStream" id=39]
[ext_resource path="res://sound/7 - Henoch Lebowitz - Secret Sanity.mp3" type="AudioStream" id=40]

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 20 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 13 )

[node name="MachineBackground" type="TextureRect" parent="CanvasLayer"]
margin_left = 443.0
margin_top = 195.0
margin_right = 1498.0
margin_bottom = 899.0
mouse_filter = 2
texture = ExtResource( 16 )

[node name="ConveyerBelt" type="TextureRect" parent="CanvasLayer"]
margin_top = 298.0
margin_right = 1920.0
margin_bottom = 798.0
mouse_filter = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Ripples1" type="Sprite" parent="CanvasLayer/ConveyerBelt"]
position = Vector2( 960, 250.5 )
texture = ExtResource( 27 )
script = ExtResource( 18 )

[node name="Ripples2" type="Sprite" parent="CanvasLayer/ConveyerBelt"]
position = Vector2( -996, 250.5 )
texture = ExtResource( 27 )
script = ExtResource( 18 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 426.0
margin_top = -301.0
margin_right = -402.0
margin_bottom = -148.0
mouse_filter = 2
alignment = 2
script = ExtResource( 17 )

[node name="Circle" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
margin_left = 4.0
margin_right = 273.0
margin_bottom = 153.0
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 6 )

[node name="Poligon" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
margin_left = 277.0
margin_right = 546.0
margin_bottom = 153.0
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 11 )

[node name="Viereck" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
margin_left = 550.0
margin_right = 819.0
margin_bottom = 153.0
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )

[node name="Dreieck" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
margin_left = 823.0
margin_right = 1092.0
margin_bottom = 153.0
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )

[node name="Spawner" parent="CanvasLayer" instance=ExtResource( 21 )]

[node name="Workpiece1" parent="CanvasLayer/Spawner" instance=ExtResource( 29 )]

[node name="ToolArm" parent="CanvasLayer" instance=ExtResource( 19 )]
position = Vector2( 1, 0 )

[node name="CheckPanel" parent="CanvasLayer" instance=ExtResource( 23 )]
position = Vector2( 1, 0 )

[node name="UIScreen" type="TextureRect" parent="CanvasLayer"]
pause_mode = 2
margin_left = 440.0
margin_top = 200.0
margin_right = 1495.0
margin_bottom = 904.0
mouse_filter = 2
texture = ExtResource( 16 )
script = ExtResource( 24 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UIScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PauseMenue" type="VBoxContainer" parent="CanvasLayer/UIScreen/CenterContainer"]
visible = false
margin_left = 271.0
margin_top = 224.0
margin_right = 783.0
margin_bottom = 480.0
rect_min_size = Vector2( 512, 256 )

[node name="Pause" type="Label" parent="CanvasLayer/UIScreen/CenterContainer/PauseMenue"]
margin_right = 512.0
margin_bottom = 71.0
theme = ExtResource( 31 )
text = "Pause"
align = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/UIScreen/CenterContainer/PauseMenue"]
margin_top = 75.0
margin_right = 512.0
margin_bottom = 79.0

[node name="ResumeGame" type="Button" parent="CanvasLayer/UIScreen/CenterContainer/PauseMenue"]
margin_top = 83.0
margin_right = 512.0
margin_bottom = 167.0
size_flags_vertical = 3
theme = ExtResource( 31 )
text = "Resume"

[node name="RestartGame" type="Button" parent="CanvasLayer/UIScreen/CenterContainer/PauseMenue"]
margin_top = 171.0
margin_right = 512.0
margin_bottom = 256.0
size_flags_vertical = 3
theme = ExtResource( 31 )
text = "Restart"

[node name="GameOverMenue" type="VBoxContainer" parent="CanvasLayer/UIScreen/CenterContainer"]
visible = false
margin_left = 213.0
margin_top = 224.0
margin_right = 841.0
margin_bottom = 480.0
rect_min_size = Vector2( 512, 256 )

[node name="GameOver" type="Label" parent="CanvasLayer/UIScreen/CenterContainer/GameOverMenue"]
margin_right = 645.0
margin_bottom = 71.0
theme = ExtResource( 31 )
text = "Game Over"
align = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/UIScreen/CenterContainer/GameOverMenue"]
margin_top = 75.0
margin_right = 645.0
margin_bottom = 79.0

[node name="GameText" type="Label" parent="CanvasLayer/UIScreen/CenterContainer/GameOverMenue"]
margin_top = 83.0
margin_right = 645.0
margin_bottom = 188.0
theme = ExtResource( 32 )
text = "The manager is not happy with your results. 
You made too many mistakes!

How long did you manage to keep up? Post your result in the comments!"
align = 1

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/UIScreen/CenterContainer/GameOverMenue"]
margin_top = 192.0
margin_right = 645.0
margin_bottom = 196.0

[node name="RestartGame" type="Button" parent="CanvasLayer/UIScreen/CenterContainer/GameOverMenue"]
margin_top = 200.0
margin_right = 645.0
margin_bottom = 256.0
size_flags_vertical = 3
theme = ExtResource( 31 )
text = "Next Worker"

[node name="StartScreen" type="VBoxContainer" parent="CanvasLayer/UIScreen/CenterContainer"]
visible = false
margin_left = 220.0
margin_top = 134.0
margin_right = 835.0
margin_bottom = 569.0
rect_min_size = Vector2( 512, 256 )

[node name="Title" type="Label" parent="CanvasLayer/UIScreen/CenterContainer/StartScreen"]
margin_right = 615.0
margin_bottom = 145.0
theme = ExtResource( 31 )
text = "De-Press-ING
Corporate"
align = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/UIScreen/CenterContainer/StartScreen"]
margin_top = 149.0
margin_right = 615.0
margin_bottom = 153.0

[node name="WelcomeText" type="Label" parent="CanvasLayer/UIScreen/CenterContainer/StartScreen"]
margin_top = 157.0
margin_right = 615.0
margin_bottom = 370.0
theme = ExtResource( 32 )
text = "Hello worker,
we are glad you are here. 
Your goal is it to fix as many items as possible on this production line.

Use your MOUSE to navigate the Tool arm. 
You can switch tools by pressing on them at the bottom of the window.
Use the right tool for each element.
HOLD the mouse button to ACTIVATE your tool."
align = 1

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/UIScreen/CenterContainer/StartScreen"]
margin_top = 374.0
margin_right = 615.0
margin_bottom = 378.0

[node name="ResumeGame2" type="Button" parent="CanvasLayer/UIScreen/CenterContainer/StartScreen"]
margin_top = 382.0
margin_right = 615.0
margin_bottom = 435.0
size_flags_vertical = 3
theme = ExtResource( 31 )
text = "Start Working"

[node name="Machine" type="TextureRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 12 )

[node name="ScoreContainer" type="CenterContainer" parent="CanvasLayer/Machine"]
margin_left = 591.0
margin_top = 27.0
margin_right = 871.0
margin_bottom = 107.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Machine/ScoreContainer"]
margin_left = 122.0
margin_top = 4.0
margin_right = 157.0
margin_bottom = 75.0

[node name="ScoreLable" type="Label" parent="CanvasLayer/Machine/ScoreContainer/MarginContainer"]
margin_right = 35.0
margin_bottom = 71.0
theme = ExtResource( 31 )
text = "0"
align = 1

[node name="TimeContainer" type="CenterContainer" parent="CanvasLayer/Machine"]
margin_left = 1032.0
margin_top = 27.0
margin_right = 1312.0
margin_bottom = 107.0
script = ExtResource( 28 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Machine/TimeContainer"]
margin_left = 61.0
margin_top = 4.0
margin_right = 219.0
margin_bottom = 75.0

[node name="TimeLable" type="Label" parent="CanvasLayer/Machine/TimeContainer/MarginContainer"]
margin_right = 158.0
margin_bottom = 71.0
theme = ExtResource( 31 )
text = "00:00"
align = 1

[node name="DifficultyPanel" type="TextureRect" parent="CanvasLayer"]
margin_left = 228.0
margin_top = 273.0
margin_right = 395.0
margin_bottom = 818.0
mouse_filter = 2
texture = ExtResource( 25 )
script = ExtResource( 30 )

[node name="LeftPanelLights" type="TextureRect" parent="CanvasLayer/DifficultyPanel"]
margin_left = 4.0
margin_top = 31.0
margin_right = 165.0
margin_bottom = 505.0
mouse_filter = 2
texture = ExtResource( 14 )

[node name="Difficulty1" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 0.494118, 1, 0.721569, 1 )
position = Vector2( 79, 397 )
texture = ExtResource( 26 )

[node name="Difficulty2" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 0.494118, 1, 0.721569, 1 )
position = Vector2( 79, 355 )
texture = ExtResource( 26 )

[node name="Difficulty3" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 0.494118, 1, 0.721569, 1 )
position = Vector2( 79, 313 )
texture = ExtResource( 26 )

[node name="Difficulty4" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 0.494118, 1, 0.721569, 1 )
position = Vector2( 79, 271 )
texture = ExtResource( 26 )

[node name="Difficulty5" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 0.494118, 1, 0.721569, 1 )
position = Vector2( 79, 229 )
texture = ExtResource( 26 )

[node name="Difficulty6" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 0.494118, 1, 0.721569, 1 )
position = Vector2( 79, 188 )
texture = ExtResource( 26 )

[node name="Difficulty7" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 0.494118, 1, 0.721569, 1 )
position = Vector2( 79, 146 )
texture = ExtResource( 26 )

[node name="Difficulty8" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 0.494118, 1, 0.721569, 1 )
position = Vector2( 79, 104 )
texture = ExtResource( 26 )

[node name="Difficulty9" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 0.494118, 1, 0.721569, 1 )
position = Vector2( 79, 62 )
texture = ExtResource( 26 )

[node name="Difficulty10" type="Sprite" parent="CanvasLayer/DifficultyPanel/LeftPanelLights"]
visible = false
modulate = Color( 1, 0.4, 0.4, 1 )
position = Vector2( 79, 21 )
texture = ExtResource( 26 )

[node name="BlinkLichter" type="Timer" parent="CanvasLayer/DifficultyPanel"]
wait_time = 0.5

[node name="RightPanel" type="TextureRect" parent="CanvasLayer"]
margin_left = 1545.0
margin_top = 273.0
margin_right = 1712.0
margin_bottom = 818.0
mouse_filter = 2
texture = ExtResource( 25 )

[node name="RightPanelLights" type="TextureRect" parent="CanvasLayer/RightPanel"]
margin_left = 2.0
margin_top = 36.0
margin_right = 166.0
margin_bottom = 497.0
mouse_filter = 2
texture = ExtResource( 10 )

[node name="CheckLamp" type="Sprite" parent="CanvasLayer/RightPanel/RightPanelLights"]
visible = false
modulate = Color( 0.560784, 1, 0.768627, 1 )
position = Vector2( 81, 29 )
texture = ExtResource( 22 )

[node name="Error3" type="Sprite" parent="CanvasLayer/RightPanel/RightPanelLights"]
visible = false
modulate = Color( 0.952941, 0.396078, 0.396078, 1 )
position = Vector2( 82, 147 )
texture = ExtResource( 22 )

[node name="Error2" type="Sprite" parent="CanvasLayer/RightPanel/RightPanelLights"]
visible = false
modulate = Color( 0.952941, 0.396078, 0.396078, 1 )
position = Vector2( 84, 272 )
texture = ExtResource( 22 )

[node name="Error1" type="Sprite" parent="CanvasLayer/RightPanel/RightPanelLights"]
visible = false
modulate = Color( 0.952941, 0.396078, 0.396078, 1 )
position = Vector2( 83, 393 )
texture = ExtResource( 22 )

[node name="CheckLampTimer" type="Timer" parent="CanvasLayer/RightPanel/RightPanelLights"]

[node name="Glass" type="TextureRect" parent="CanvasLayer"]
margin_left = 443.0
margin_top = 195.0
margin_right = 1498.0
margin_bottom = 899.0
mouse_filter = 2
texture = ExtResource( 9 )

[node name="VorlageMainInterface" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 961, 540 )
texture = ExtResource( 1 )

[node name="Sound" type="Node" parent="."]
script = ExtResource( 33 )

[node name="ToolAudio" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 34 )

[node name="CheckLightAudio" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 35 )

[node name="ErrorAudio" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 36 )

[node name="LastErrorAudio" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 37 )

[node name="StartMachineAudio" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 38 )

[node name="ButtonAudio" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 39 )

[node name="MusikAudio" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 40 )

[connection signal="errorAudio" from="." to="Sound" method="_on_Node2D_errorAudio"]
[connection signal="lastErrorAudio" from="." to="Sound" method="_on_Node2D_lastErrorAudio"]
[connection signal="playChecklightAudio" from="." to="Sound" method="_on_Node2D_playChecklightAudio"]
[connection signal="startMachineAudio" from="." to="Sound" method="_on_Node2D_startMachineAudio"]
[connection signal="circle" from="CanvasLayer/HBoxContainer" to="CanvasLayer/ToolArm" method="_on_circle"]
[connection signal="dreieck" from="CanvasLayer/HBoxContainer" to="CanvasLayer/ToolArm" method="_on_dreieck"]
[connection signal="poligon" from="CanvasLayer/HBoxContainer" to="CanvasLayer/ToolArm" method="_on_poligon"]
[connection signal="viereck" from="CanvasLayer/HBoxContainer" to="CanvasLayer/ToolArm" method="_on_viereck"]
[connection signal="button_down" from="CanvasLayer/HBoxContainer/Circle" to="Sound" method="_on_button_down"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Circle" to="CanvasLayer/HBoxContainer" method="_on_Circle_pressed"]
[connection signal="button_down" from="CanvasLayer/HBoxContainer/Poligon" to="Sound" method="_on_button_down"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Poligon" to="CanvasLayer/HBoxContainer" method="_on_Poligon_pressed"]
[connection signal="button_down" from="CanvasLayer/HBoxContainer/Viereck" to="Sound" method="_on_button_down"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Viereck" to="CanvasLayer/HBoxContainer" method="_on_Viereck_pressed"]
[connection signal="button_down" from="CanvasLayer/HBoxContainer/Dreieck" to="Sound" method="_on_button_down"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Dreieck" to="CanvasLayer/HBoxContainer" method="_on_Dreieck_pressed"]
[connection signal="circle" from="CanvasLayer/ToolArm" to="." method="_on_circle"]
[connection signal="dreieck" from="CanvasLayer/ToolArm" to="." method="_on_dreieck"]
[connection signal="poligon" from="CanvasLayer/ToolArm" to="." method="_on_poligon"]
[connection signal="viereck" from="CanvasLayer/ToolArm" to="." method="_on_viereck"]
[connection signal="checked" from="CanvasLayer/CheckPanel" to="." method="_on_CheckPanel_checked"]
[connection signal="error" from="CanvasLayer/CheckPanel" to="." method="_on_CheckPanel_error"]
[connection signal="button_down" from="CanvasLayer/UIScreen/CenterContainer/PauseMenue/ResumeGame" to="CanvasLayer/UIScreen" method="_on_ResumeGame_button_down"]
[connection signal="button_down" from="CanvasLayer/UIScreen/CenterContainer/PauseMenue/ResumeGame" to="Sound" method="_on_button_down"]
[connection signal="button_down" from="CanvasLayer/UIScreen/CenterContainer/PauseMenue/RestartGame" to="CanvasLayer/UIScreen" method="_on_RestartGame_button_down"]
[connection signal="button_down" from="CanvasLayer/UIScreen/CenterContainer/PauseMenue/RestartGame" to="Sound" method="_on_button_down"]
[connection signal="button_down" from="CanvasLayer/UIScreen/CenterContainer/GameOverMenue/RestartGame" to="CanvasLayer/UIScreen" method="_on_RestartGame_button_down"]
[connection signal="button_down" from="CanvasLayer/UIScreen/CenterContainer/GameOverMenue/RestartGame" to="Sound" method="_on_button_down"]
[connection signal="button_down" from="CanvasLayer/UIScreen/CenterContainer/StartScreen/ResumeGame2" to="CanvasLayer/UIScreen" method="_on_ResumeGame_button_down"]
[connection signal="button_down" from="CanvasLayer/UIScreen/CenterContainer/StartScreen/ResumeGame2" to="Sound" method="_on_button_down"]
[connection signal="timeout" from="CanvasLayer/DifficultyPanel/BlinkLichter" to="CanvasLayer/DifficultyPanel" method="_on_BlinkLichter_timeout"]
[connection signal="timeout" from="CanvasLayer/RightPanel/RightPanelLights/CheckLampTimer" to="." method="_on_CheckLampTimer_timeout"]
[connection signal="finished" from="Sound/MusikAudio" to="Sound" method="_on_MusikAudio_finished"]
